# hipermos-freecad-tools

./: CHANGELOG.md  README.md
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake
src/: CMakeLists.txt
src/Doc/: CMakeLists.txt
src/Tools/: SubWCRev.py
